Navigatie, Footer opgezet en voorzien van styling, en wat pagina's om de links te testen

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-family: "Roboto", serif;
+  font-family: "Roboto", sans-serif;
 }
 
 h1 {
@@ -25,14 +25,12 @@ h1 {
 
 h2 {
   font-family: inherit;
+  font-size: 24px;
 }
 
 h3 {
   font-family: inherit;
-}
-
-h4 {
-  font-family: inherit;
+  font-size: 20px;
 }
 
 p {
@@ -48,13 +46,14 @@ button:hover {
   cursor: pointer;
 }
 
-a,
-
-a:hover {
-  text-decoration: underline;
+a {
+  color: inherit;
 }
 
-img {
-  width: 100%;
+a:active {
+  color: inherit;
 }
 
+img, button {
+  flex-shrink: 0;
+}
