--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.logo {
+  width: 250px;
+}
+
 .upper-section {
   display: flex;
   align-items: center;
@@ -6,20 +10,15 @@
   padding: 40px;
   background: var(--color-orange-light);
   width: 100%;
-  max-width: 3000px;
-}
-
-.logo {
-  width: 250px;
 }
 
 .lower-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
   background: var(--color-orange-dark);
   width: 100%;
-  max-width: 3000px;
-  color: white;
-  text-align: center;
-  padding-bottom: 40px;
 }
 
 .lower-section-h2 {
@@ -31,6 +30,6 @@
   background-color: var(--color-brown);
   color: var(--color-black);
   text-align: center;
-  padding: 30px 0;
+  padding: 30px;
   font-weight: 600;
 }
