--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -5,10 +5,11 @@
     color: var(--color-white);
     border-style: solid;
     border-width: 1px;
-    max-width: 100px;
+    max-width: 150px;
     padding: 10px;
     border-radius: 25px;
     font-weight: bold;
+    font-size: 20px;
     cursor: pointer;
     text-decoration: none;
 }
