--- a/src/components/input/Input.css
+++ b/src/components/input/Input.css
@@ -2,4 +2,12 @@
     display: flex;
     align-self: center;
     flex-direction: row;
+    background-color: var(--color-sand);
+    border: 1px solid var(--color-brown);
+    border-radius: 4px;
+    padding: 12px;
+    font-size: 16px;
+    margin-bottom: 20px;
+    width: 100%;
+    text-align: left;
 }
