--- a/src/pages/myRequestsPage/MyRequests.css
+++ b/src/pages/myRequestsPage/MyRequests.css
@@ -4,6 +4,9 @@
     max-width: 1000px;
 }
 
+h1 {
+    margin-bottom: 20px;
+}
 .request-item {
     border: solid 1px var(--color-black);
     background: var(--color-sand);
@@ -15,6 +18,7 @@
 .request-summary {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background: var(--color-sand);
     color: var(--color-black);
     font-weight: bold;
