--- a/src/pages/profilePage/Profile.css
+++ b/src/pages/profilePage/Profile.css
@@ -1,25 +1,39 @@
-/* src/pages/profilePage/Profile.css */
-
-.profile-container {
-    padding: 20px;
-    max-width: 800px;
+.profile-form {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
     margin: 0 auto;
+    background-color: var(--color-sand);
+    padding: 30px;
+    border-radius: 25px;
+    border: 1px solid var(--color-black);
 }
 
-.profile-container h2 {
-    text-align: center;
-    font-size: 24px;
+.profile-form label {
+    margin-top: 10px;
+    font-weight: bold;
 }
 
-.profile-details {
-    margin-top: 20px;
+.profile-form input {
+    padding: 10px;
+    border: 1px solid var(--color-black);
+    border-radius: 5px;
+    margin-bottom: 10px;
+    width: 100%;
 }
 
-.profile-details p {
-    font-size: 18px;
+.profile-form .error {
+    color: var(--color-brown);
+    font-size: 14px;
     margin-bottom: 10px;
 }
 
-.profile-details strong {
-    font-weight: bold;
+.profile-form .success {
+    color: green;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.profile-form button:hover {
+    background-color: var(--color-orange-light);
 }
